--- a/app/src/main/res/layout/set_text_dialog.xml
+++ b/app/src/main/res/layout/set_text_dialog.xml
@@ -1,50 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:background="#060606">
+    android:orientation="vertical" android:layout_width="fill_parent"
+    android:layout_height="100dp"
+    android:background="#060606"
+    android:minHeight="100dp"
+    android:minWidth="300dp">
 
     <EditText
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
+        android:layout_height="fill_parent"
+        android:id="@+id/projectNameText"
         android:layout_weight="2"
         android:hint="Project name.."
         android:textColorHint="#868686"
         android:paddingLeft="20dp"
-        android:background="#ffffff" />
+        android:background="#ffffff"
+        android:textColor="#333333" />
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="1">
+        android:layout_weight="2">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Cancel"
-            android:id="@+id/textView2"
+            android:id="@+id/cancelButton"
             android:layout_weight="1"
             android:textColor="#9f9b9b"
             android:gravity="center_vertical|center_horizontal"
-            android:layout_margin="1dp"
-            android:background="#ffffff" />
+            android:background="#ffffff"
+            android:layout_marginTop="1dp"
+            android:layout_marginRight="1dp" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="OK"
-            android:id="@+id/textView3"
+            android:id="@+id/okButton"
             android:layout_weight="1"
             android:textColor="#a6a6a6"
             android:gravity="center_vertical|center_horizontal"
-            android:layout_margin="1dp"
             android:autoText="false"
-            android:background="#ffffff" />
+            android:background="#ffffff"
+            android:layout_marginTop="1dp" />
     </LinearLayout>
 
 </LinearLayout>
