--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -5,8 +5,8 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     tools:context="com.colinearproductions.scrumcompanion.LoginScreen"
-    android:background="#ffd83b"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:background="@color/colorPrimary">
 
     <LinearLayout
         android:orientation="vertical"
@@ -16,7 +16,8 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="100dp">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -28,7 +29,7 @@
                     android:layout_width="90dip"
                     android:layout_height="90dip"
                     android:id="@+id/imageView"
-                    android:background="@drawable/logo"
+                    android:background="@drawable/logo_white"
                     android:layout_gravity="bottom|right" />
 
                 <LinearLayout
@@ -44,7 +45,7 @@
                         android:text="SCRUM"
                         android:id="@+id/logoText1"
                         android:layout_gravity="center_vertical"
-                        android:textColor="#161616"
+                        android:textColor="@color/colorPrimaryWhite"
                         android:textSize="40dp"
                         android:textAlignment="center" />
 
@@ -55,7 +56,7 @@
                         android:text="Companion"
                         android:id="@+id/logoText2"
                         android:layout_gravity="center_vertical"
-                        android:textColor="#161616"
+                        android:textColor="@color/colorPrimaryWhite"
                         android:textSize="27dp"
                         android:textAlignment="center"
                         android:layout_marginTop="-10dp" />
@@ -64,25 +65,6 @@
             </LinearLayout>
 
         </LinearLayout>
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Login"
-            android:id="@+id/loginText"
-            android:textColor="#161616"
-            android:textSize="40dp"
-            android:textAlignment="center"
-            android:layout_marginTop="50dp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@android:color/black"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp" />
 
 
     </LinearLayout>
