--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -23,6 +23,9 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main_screen"
-        app:menu="@menu/activity_main_screen_drawer" />
+        app:menu="@menu/activity_main_screen_drawer"
+        app:itemTextColor="@color/colorPrimary"
+        app:itemIconTint="@color/colorPrimary"
+        android:background="@color/colorPrimaryWhite" />
 
 </android.support.v4.widget.DrawerLayout>
