--- a/app/src/main/res/layout/create_project_dialog.xml
+++ b/app/src/main/res/layout/create_project_dialog.xml
@@ -1,28 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="fill_parent"
-    android:layout_height="100dp"
-    android:background="#060606"
+    android:layout_height="150dp"
     android:minHeight="100dp"
-    android:minWidth="300dp">
+    android:minWidth="300dp"
+    android:background="#ffffff">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Choose a name for your project, this cannot be changed"
+        android:id="@+id/textView7"
+        android:textColor="@color/colorPrimary"
+        android:textAlignment="center"
+        android:textSize="15sp"
+        android:layout_margin="10dp" />
 
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/projectNameText"
-        android:layout_weight="2"
         android:hint="Project name.."
-        android:textColorHint="#868686"
+        android:textColorHint="@color/colorHint"
         android:paddingLeft="20dp"
         android:background="#ffffff"
-        android:textColor="#333333" />
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_weight="1" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="2">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
 
         <TextView
             android:layout_width="fill_parent"
@@ -31,11 +41,12 @@
             android:text="Cancel"
             android:id="@+id/cancelButton"
             android:layout_weight="1"
-            android:textColor="#9f9b9b"
-            android:gravity="center_vertical|center_horizontal"
+            android:textColor="@color/colorLink"
             android:background="#ffffff"
-            android:layout_marginTop="1dp"
-            android:layout_marginRight="1dp" />
+            android:gravity="bottom|right"
+            android:padding="10dp"
+            android:textSize="17sp"
+            android:layout_marginRight="15dp" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -43,12 +54,13 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="OK"
             android:id="@+id/okButton"
-            android:layout_weight="1"
-            android:textColor="#a6a6a6"
-            android:gravity="center_vertical|center_horizontal"
+            android:textColor="@color/colorLink"
             android:autoText="false"
             android:background="#ffffff"
-            android:layout_marginTop="1dp" />
+            android:gravity="bottom|center"
+            android:padding="10dp"
+            android:layout_weight="2"
+            android:textSize="16sp" />
     </LinearLayout>
 
 </LinearLayout>
