--- a/app/src/main/res/layout/fragment_user_story.xml
+++ b/app/src/main/res/layout/fragment_user_story.xml
@@ -1,46 +1,23 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/main_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.colinearproductions.scrumcompanion.UserStoryFragment"
     android:paddingLeft="10dp"
-    android:paddingRight="10dp">
+    android:paddingRight="10dp"
+    android:background="@color/colorPrimaryWhite">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="US_ID : "
-        android:id="@+id/user_story_id_text"
-        android:textSize="20sp"
-        android:textAlignment="center"
-        android:layout_marginTop="5dp" />
 
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Description:"
-            android:id="@+id/textView"
-            android:textSize="20sp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="edit"
-            android:id="@+id/edit_user_story_description_button"
-            android:layout_gravity="right"
-            android:textColor="#FFE552" />
-    </LinearLayout>
 
     <EditText
         android:layout_width="match_parent"
@@ -52,7 +29,19 @@
         android:hint="As a Player\nI want to be able to customize my character "
         android:enabled="false"
         android:editable="false"
-        android:cursorVisible="false"/>
+        android:cursorVisible="false"
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edit"
+        android:id="@+id/edit_user_story_description"
+        android:layout_gravity="right"
+        android:textColor="@color/colorLink"
+        android:textSize="20sp"
+        android:layout_marginRight="15dp" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -65,23 +54,15 @@
             android:text="Tasks:"
             android:id="@+id/textView2"
             android:textSize="20sp"
-            android:layout_marginTop="15dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textColor="@color/colorPrimary" />
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="+"
-            android:id="@+id/user_story_new_task_button"
-            android:layout_gravity="right"
-            android:textColor="#FFE552" />
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#ffd640"/>
+        android:background="@color/colorHint"/>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="wrap_content"
@@ -91,3 +72,16 @@
         android:layout_marginTop="5dp" />
 
 </LinearLayout>
+
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@drawable/plus"
+
+        app:layout_anchorGravity="bottom|right|end"
+        android:id="@+id/user_story_new_task_fab" />
+</android.support.design.widget.CoordinatorLayout>
