--- a/app/src/main/res/layout/new_task_dialog.xml
+++ b/app/src/main/res/layout/new_task_dialog.xml
@@ -1,46 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="fill_parent"
-    android:layout_height="300dp"
-    android:background="#060606"
-    android:minHeight="100dp"
-    android:minWidth="300dp">
+    android:layout_height="200dp"
+    android:minHeight="150dp"
+    android:minWidth="300dp"
+    android:background="#ffffff">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Task description.."
+        android:id="@+id/textView7"
+        android:textColor="@color/colorPrimary"
+        android:textAlignment="center"
+        android:textSize="15sp"
+        android:layout_margin="10dp" />
 
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/new_task_description_text"
-        android:layout_weight="1.3"
-        android:hint="Task description"
-        android:textColorHint="#868686"
+        android:hint="Task Description"
+        android:textColorHint="@color/colorHint"
+        android:paddingLeft="20dp"
+        android:background="#ffffff"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_weight="1"
         android:inputType="textMultiLine"
+        android:paddingRight="20dp" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:paddingLeft="20dp"
-        android:background="#ffffff"
-        android:textColor="#333333" />
+        android:paddingRight="20dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Points"
+            android:id="@+id/textView"
+            android:textColor="@color/colorHint" />
 
-
-    <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/new_task_points_text"
-        android:layout_weight="2"
-        android:hint="Story Points"
-        android:textColorHint="#868686"
-        android:inputType="numberDecimal"
-        android:paddingLeft="20dp"
-        android:background="#ffffff"
-        android:textColor="#333333"
-        android:layout_marginTop="1dp" />
-
-
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:id="@+id/new_task_points_text"
+            android:paddingLeft="20dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorHint="@color/colorHint"
+            android:hint="Points" />
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="2">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
 
         <TextView
             android:layout_width="fill_parent"
@@ -49,11 +69,12 @@
             android:text="Cancel"
             android:id="@+id/new_task_dialog_cancel"
             android:layout_weight="1"
-            android:textColor="#9f9b9b"
-            android:gravity="center_vertical|center_horizontal"
+            android:textColor="@color/colorLink"
             android:background="#ffffff"
-            android:layout_marginTop="1dp"
-            android:layout_marginRight="1dp" />
+            android:gravity="bottom|right"
+            android:padding="10dp"
+            android:textSize="17sp"
+            android:layout_marginRight="15dp" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -61,12 +82,13 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="OK"
             android:id="@+id/new_task_dialog_ok"
-            android:layout_weight="1"
-            android:textColor="#a6a6a6"
-            android:gravity="center_vertical|center_horizontal"
+            android:textColor="@color/colorLink"
             android:autoText="false"
             android:background="#ffffff"
-            android:layout_marginTop="1dp" />
+            android:gravity="bottom|center"
+            android:padding="10dp"
+            android:layout_weight="2"
+            android:textSize="16sp" />
     </LinearLayout>
 
 </LinearLayout>
