--- a/app/src/main/res/layout/new_user_story_dialog.xml
+++ b/app/src/main/res/layout/new_user_story_dialog.xml
@@ -2,29 +2,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="fill_parent"
     android:layout_height="200dp"
-    android:background="#060606"
-    android:minHeight="100dp"
-    android:minWidth="300dp">
+    android:minHeight="200dp"
+    android:minWidth="300dp"
+    android:background="#ffffff">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Create a new user story"
+        android:id="@+id/textView7"
+        android:textColor="@color/colorPrimary"
+        android:textAlignment="center"
+        android:textSize="15sp"
+        android:layout_margin="10dp" />
 
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/new_US_description_text"
-        android:layout_weight="1.3"
-        android:hint="As a...\nI want to...\nSo that..."
-        android:textColorHint="#868686"
-        android:inputType="textMultiLine"
+        android:hint="User Story description..."
+        android:textColorHint="@color/colorHint"
         android:paddingLeft="20dp"
         android:background="#ffffff"
-        android:textColor="#333333" />
-
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_weight="1"
+        android:inputType="textMultiLine"
+        android:paddingRight="20dp" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="2">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
 
         <TextView
             android:layout_width="fill_parent"
@@ -33,11 +43,12 @@
             android:text="Cancel"
             android:id="@+id/new_US_dialog_cancel"
             android:layout_weight="1"
-            android:textColor="#9f9b9b"
-            android:gravity="center_vertical|center_horizontal"
+            android:textColor="@color/colorLink"
             android:background="#ffffff"
-            android:layout_marginTop="1dp"
-            android:layout_marginRight="1dp" />
+            android:gravity="bottom|right"
+            android:padding="10dp"
+            android:textSize="17sp"
+            android:layout_marginRight="15dp" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -45,12 +56,13 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="OK"
             android:id="@+id/new_US_dialog_ok"
-            android:layout_weight="1"
-            android:textColor="#a6a6a6"
-            android:gravity="center_vertical|center_horizontal"
+            android:textColor="@color/colorLink"
             android:autoText="false"
             android:background="#ffffff"
-            android:layout_marginTop="1dp" />
+            android:gravity="bottom|center"
+            android:padding="10dp"
+            android:layout_weight="2"
+            android:textSize="16sp" />
     </LinearLayout>
 
 </LinearLayout>
