--- a/app/src/main/res/layout/user_story_task_item.xml
+++ b/app/src/main/res/layout/user_story_task_item.xml
@@ -1,40 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/colorPrimaryWhite">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Add a randomizer function for character creation and test a new line system "
+        android:id="@+id/user_story_task_item_description"
+        android:layout_marginTop="5dp"
+        android:textSize="16dp"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp" />
+
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Task Id: T_13 Points: 3"
-            android:id="@+id/user_story_task_item_id_points"
-            android:textColor="#ffbf00"
-            android:textSize="17dp" />
+            android:text="Points: 3"
+            android:id="@+id/user_story_task_item_points"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="13dp"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:layout_gravity="bottom" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Add a randomizer function for character creation and test a new line system "
-            android:id="@+id/user_story_task_item_description"
-            android:layout_marginTop="5dp"
-            android:textSize="16dp" />
-
+            android:text="edit"
+            android:id="@+id/user_story_task_item_edit_btn"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/colorLink"
+            android:textSize="15sp"
+            android:layout_weight="2"
+            android:layout_marginRight="15dp"
+            android:gravity="right"
+            android:padding="5dp" />
     </LinearLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="EDIT"
-        android:id="@+id/user_story_task_item_edit_btn"
-        android:layout_gravity="center_vertical"
-        android:textColor="#ffd84b"
-        android:textSize="16dp" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/colorSeparatorLight"/>
+
 </LinearLayout>
